# agent-debate

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/: architecture.html  architecture.md
docs/superpowers/plans/: 2026-03-25-opening-arguments.md  2026-03-26-opening-arguments.md
docs/superpowers/specs/: 2026-03-25-opening-arguments-design.md
plugin/: marketplace-entry.json
plugin/debate/: CHANGELOG.md  README.md
plugin/debate/.claude-plugin/: plugin.json
plugin/debate/commands/: run.md
plugin/debate/scripts/: debate.sh
src/agent_debate/: __init__.py  cli.py  config.py  orchestrator.py  personas.py  prompts.py  report.py  server.py  streaming.py  tracing.py  types.py
src/agent_debate/personas/: architecture.json  conspiracy_theorist.json  devils_advocate.json  maintainability.json  performance.json  reliability.json  security.json
src/agent_debate/providers/: __init__.py  amp.py  base.py  claude.py  codex.py  gemini.py  subprocess_base.py
src/agent_debate/viewer/: index.html
tests/: test_config.py  test_orchestrator.py  test_personas.py  test_prompts.py  test_providers.py  test_report.py  test_server.py  test_tracing.py
tests/evals/: conftest.py  helpers.py  run_baseline.py  scoring.py  seed_datasets.py  test_dedup_eval.py  test_synthesis_eval.py
tests/fixtures/: debate.json  round1_architect.md  round1_pragmatist.md  round1_reliability.md
